fix: update card visibility logic and improve grid layout for publications section to enhance responsiveness and user experience

--- a/src/styles/components/filter_form.scss
+++ b/src/styles/components/filter_form.scss
@@ -254,7 +254,7 @@
 
     @media (max-width: 1199px) {
       grid-template-columns: repeat(2, 1fr);
-      gap: 48px;
+      gap: 2rem;
     }
 
     @media (max-width: 991px) {
