--- a/src/styles/section/block_post_cards.scss
+++ b/src/styles/section/block_post_cards.scss
@@ -15,17 +15,18 @@
 
 .publications {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(0, 488px));
+  grid-template-columns: repeat(3, 1fr);
   gap: 56px;
   margin-top: 20px;
 
-  @media (max-width: 1535px) {
+  @media (max-width: 1199px) {
+    grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
   }
 
-  @media (max-width: 767px) {
-    grid-template-columns: minmax(330px, 1fr);
-    gap: 20px;
+  @media (max-width: 991px) {
+    grid-template-columns: 1fr;
+    gap: 16px;
   }
 }
 
