--- a/src/styles/section/block_publications_simple.scss
+++ b/src/styles/section/block_publications_simple.scss
@@ -12,7 +12,7 @@
 
     @media (max-width: 1199px) {
       grid-template-columns: repeat(3, 1fr);
-      gap: 48px;
+      gap: 2rem;
     }
 
     @media (max-width: 991px) {
