--- a/src/styles/section/block_search_results.scss
+++ b/src/styles/section/block_search_results.scss
@@ -26,7 +26,7 @@
 
   @media (max-width: 1199px) {
     grid-template-columns: repeat(2, 1fr);
-    gap: 48px;
+    gap: 2rem;
   }
 
   @media (max-width: 991px) {
